# Product-site

./: .env.template  .gitignore  Dockerfile  README.md  Test-Site.html  demo.py  devices.csv  docker-compose.yaml  id_rsa  id_rsa.pub  pyproject.toml  quieries.sql  rsa  rsa.pub  timeweb  timeweb.pub
mysite/: log.txt  log.txt.1  shopapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/.ssh/: id_rsa  id_rsa.pub
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/myenv/: pyvenv.cfg
mysite/mysite/: asgi.py  settings.py  sitemaps.py  urls.py
mysite/requestapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_create_at_product_discount_product_price.py  0003_product_archive.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_order_options_alter_product_options_and_more.py  0008_product_created_by.py  0009_order_receipt.py  0010_order_preview.py  0011_remove_order_preview_product_preview.py  0012_productimage.py  0013_alter_order_options_alter_product_options_and_more.py
(+38 files in other folders)
